--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,1 +1,84 @@
-<p>side-nav works!</p>
+<!-- Sidebar -->
+<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+
+    <!-- Sidebar - Brand -->
+    <a class="sidebar-brand d-flex" href="index.html">
+        <div class="sidebar-brand-text">CRM <sup>1.0.1</sup></div>
+    </a>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <!-- Nav Item - Dashboard -->
+    <li class="nav-item active">
+        <a class="nav-link" href="index.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Home</span></a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Heading -->
+    <div class="sidebar-heading">
+        Tools
+    </div>
+
+    <!-- Nav Item - Sales -->
+    <li class="nav-item">
+        <a class="nav-link" href="sales.html">
+            <i class="fas fa-fw fa-exchange-alt"></i>
+            <span>Sales</span></a>
+    </li>
+    <!-- Nav Item - Stocks -->
+    <li class="nav-item">
+        <a class="nav-link" href="stocks.html">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Stocks</span></a>
+    </li>
+    <!-- Nav Item - Finance Collapse Menu -->
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFinance"
+            aria-expanded="true" aria-controls="collapseFinance">
+            <i class="fas fa-fw fa-euro-sign"></i>
+            <span>Finance</span>
+        </a>
+        <div id="collapseFinance" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="finance.html">Incomes</a>
+                <a class="collapse-item" href="finance.html">Outcomes</a>
+                <a class="collapse-item" href="profit.html">Profit</a>
+                <a class="collapse-item" href="capital.html">Capital</a>
+            </div>
+        </div>
+    </li>
+    <!-- Nav Item - Team -->
+    <li class="nav-item">
+        <a class="nav-link" href="team.html">
+            <i class="fas fa-fw fa-users"></i>
+            <span>Team</span></a>
+    </li>
+    <!-- Nav Item - Contacts Collapse Menu -->
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseContacts"
+            aria-expanded="true" aria-controls="collapseContacts">
+            <i class="fas fa-fw fa-address-book"></i>
+            <span>Contacts</span>
+        </a>
+        <div id="collapseContacts" class="collapse" aria-labelledby="headingUtilities"
+            data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="contacts.html">Partners</a>
+                <a class="collapse-item" href="contacts.html">Customers</a>
+            </div>
+        </div>
+    </li>
+    <!-- Nav Item - Settings -->
+    <li class="nav-item">
+        <a class="nav-link" href="settings.html">
+            <i class="fas fa-fw fa-wrench"></i>
+            <span>Settings</span></a>
+    </li>
+</ul>
+<!-- End of Sidebar -->
+ 
