--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
 
-        <app-side-nav></app-side-nav>
+        <app-side-nav *ngIf="true"></app-side-nav>
 
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
@@ -9,7 +9,7 @@
             <!-- Main Content -->
             <div id="content">
 
-                <app-header></app-header>
+                <app-header *ngIf="true"></app-header>
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
