--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -2,7 +2,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex" routerLink="/home/default">
+    <a class="sidebar-brand d-flex" routerLink="/home">
         <div class="sidebar-brand-text">CRM <sup>1.0.1</sup></div>
     </a>
 
@@ -26,13 +26,13 @@
 
     <!-- Nav Item - Sales -->
     <li class="nav-item">
-        <a class="nav-link" routerLink="/sales/all">
+        <a class="nav-link" routerLink="/sales">
             <i class="fas fa-fw fa-exchange-alt"></i>
             <span>Sales</span></a>
     </li>
     <!-- Nav Item - Stocks -->
     <li class="nav-item">
-        <a class="nav-link" routerLink="/stocks/all">
+        <a class="nav-link" routerLink="/stocks">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Stocks</span></a>
     </li>
@@ -45,8 +45,8 @@
         </a>
         <div id="collapseFinance" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" routerLink="/finance/incomes/monthly">Incomes</a>
-                <a class="collapse-item" routerLink="/finance/outcomes/monthly">Outcomes</a>
+                <a class="collapse-item" routerLink="/finance">Incomes</a>
+                <a class="collapse-item" routerLink="/finance">Outcomes</a>
                 <a class="collapse-item" routerLink="/profit">Profit</a>
                 <a class="collapse-item" routerLink="/capital">Capital</a>
             </div>
@@ -68,8 +68,8 @@
         <div id="collapseContacts" class="collapse" aria-labelledby="headingUtilities"
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" routerLink="/contacts/partners">Partners</a>
-                <a class="collapse-item" routerLink="/contacts/customers">Customers</a>
+                <a class="collapse-item" routerLink="/contacts">Partners</a>
+                <a class="collapse-item" routerLink="/contacts">Customers</a>
             </div>
         </div>
     </li>
